--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
 	<title>Mi pagina</title>
 </head>
 <body>
+
+	<img src="dragon-ball-super-fim-760x428.jpg">
+
+
 	<h1>
-		<marquee>Funcionando</marquee>
+		<marquee >Funcionando</marquee>
 	</h1>
 </body>
 </html>
